kubernetes-up-and-running/securing-applications/amicontained-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: amicontained
spec:
  containers:
    - image: r.j3ss.co/amicontained:v0.4.9
      name: amicontained
      command: ["/bin/sh", "-c", "--"]
      args: ["amicontained"]
